[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["nicolequindara <cquindara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
